{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 204,
  "lineage": "413c54bc-6b0b-4174-bf62-b794d346ce66",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nogales_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.2.0.4",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-10-31T09:58:37.762-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/local-volt-431316-m2/regions/us-central1/addresses/pro-nogales-private-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "pro-nogales-private-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "local-volt-431316-m2",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/regions/us-central1/addresses/pro-nogales-private-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/regions/us-central1/subnetworks/pro-nogales-subnetwork",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/zones/us-central1-c/instances/pro-nogales-videocall"
            ]
          },
          "dependencies": [
            "google_compute_network.nogales-network",
            "google_compute_subnetwork.nogales-subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "videcall_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.56.212.112",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-10-31T10:29:55.123-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/local-volt-431316-m2/regions/us-central1/addresses/pro-nogales-videcall-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "pro-nogales-videcall-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "local-volt-431316-m2",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/regions/us-central1/addresses/pro-nogales-videcall-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/zones/us-central1-c/instances/pro-nogales-videocall"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "videocall-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/zones/us-central1-c/networkEndpointGroups/private-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 100,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-11-19T14:50:49.816-08:00",
            "enable_cdn": false,
            "fingerprint": "xW-hR6JT6CA=",
            "generated_id": 7787450651986929830,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/healthChecks/health-check"
            ],
            "id": "projects/local-volt-431316-m2/global/backendServices/pro-videocall-lb",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "pro-videocall-lb",
            "port_name": "http",
            "project": "local-volt-431316-m2",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/backendServices/pro-videocall-lb",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.videocall",
            "google_compute_network.nogales-network",
            "google_compute_network_endpoint_group.neg",
            "google_compute_subnetwork.nogales-subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-31T09:58:26.024-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/local-volt-431316-m2/global/firewalls/pro-nogales-http-rule",
            "log_config": [],
            "name": "pro-nogales-http-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/networks/pro-nogales-network",
            "priority": 1000,
            "project": "local-volt-431316-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/firewalls/pro-nogales-http-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nogales-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-31T09:58:26.022-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/local-volt-431316-m2/global/firewalls/pro-nogales-https-rule",
            "log_config": [],
            "name": "pro-nogales-https-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/networks/pro-nogales-network",
            "priority": 1000,
            "project": "local-volt-431316-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/firewalls/pro-nogales-https-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nogales-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-10-31T09:58:25.961-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/local-volt-431316-m2/global/firewalls/pro-nogales-ssh-rule",
            "log_config": [],
            "name": "pro-nogales-ssh-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/networks/pro-nogales-network",
            "priority": 1000,
            "project": "local-volt-431316-m2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/firewalls/pro-nogales-ssh-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nogales-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "videocall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "pro-nogales-videocall",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-113-18244-85-29",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/zones/us-central1-c/disks/pro-nogales-videocall"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "effective_labels": {
              "container-vm": "cos-stable-113-18244-85-29",
              "goog-ec-src": "vm_add-tf",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/local-volt-431316-m2/zones/us-central1-c/instances/pro-nogales-videocall",
            "instance_id": "3720057657068751269",
            "label_fingerprint": "-w4UKwj4sas=",
            "labels": {
              "container-vm": "cos-stable-113-18244-85-29",
              "goog-ec-src": "vm_add-tf"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "gce-container-declaration": "spec:\n  containers:\n    - image: us-docker.pkg.dev/ejfexperiments/us.gcr.io/nogales_videocall_front_back:1.3.0\n      name:  nogalesserver\n      env:\n        - name: GOOGLE_APPLICATION_CREDENTIALS\n          value: /tmp/app/credentials/local-volt-431316-m2-4fe954a04994.json\n        - name: PORT\n          value: 80\n        - name: USE_SECURE\n          value: no\n        - name: ENV\n          value: pro\n        - name: TRAIN_SERVER\n          v [...]
              "google-logging-enabled": "true"
            },
            "metadata_fingerprint": "fN0NhXJhjXU=",
            "name": "pro-nogales-videocall",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.56.212.112",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/networks/pro-nogales-network",
                "network_ip": "10.2.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/regions/us-central1/subnetworks/pro-nogales-subnetwork",
                "subnetwork_project": "local-volt-431316-m2"
              }
            ],
            "project": "local-volt-431316-m2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/zones/us-central1-c/instances/pro-nogales-videocall",
            "service_account": [
              {
                "email": "284609972807-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "terraform_labels": {
              "container-vm": "cos-stable-113-18244-85-29",
              "goog-ec-src": "vm_add-tf",
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.nogales_private_ip",
            "google_compute_address.videcall_ip",
            "google_compute_network.nogales-network",
            "google_compute_subnetwork.nogales-subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "nogales-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/local-volt-431316-m2/global/networks/pro-nogales-network",
            "mtu": 1460,
            "name": "pro-nogales-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2028989506325973449",
            "project": "local-volt-431316-m2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/networks/pro-nogales-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nogales-subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-10-31T09:58:26.191-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/local-volt-431316-m2/regions/us-central1/subnetworks/pro-nogales-subnetwork",
            "ip_cidr_range": "10.2.0.0/28",
            "name": "pro-nogales-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/global/networks/pro-nogales-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "local-volt-431316-m2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/local-volt-431316-m2/regions/us-central1/subnetworks/pro-nogales-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.nogales-network"
          ]
        }
      ]
    }
  ]
}